# smolnet

./: .gitignore  README.md  app.py  practice.ipynb  requirements.txt  smolnet.py  smolnet_matrix.py  smolnet_mnist.ipynb  train_smolnet.py
smolnet/: pyproject.toml
smolnet/smolnet/: smolnet_matrix.py
