[tool.poetry]
name = "smolnet"
version = "0.1.0"
description = "smolnet, a tiny MLP module, implemented from scratch using numpy"
authors = ["Souvik Bhattacharyya <souvikshanku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
